Url change for github pages

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     integrity="sha384-bYdxxUwYipFNohQlHt0bjN/LCpueqWz13HufFEV1SUatKs1cm4L6fFgCi1jT643X" crossorigin="anonymous" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parsons React Prototype I</title>
-  <script type="module" crossorigin src="/assets/index.426abca6.js"></script>
-  <link rel="stylesheet" href="/assets/index.3c7eed9c.css">
+  <script type="module" crossorigin src="/parsons-logex-prototype-I/assets/index.426abca6.js"></script>
+  <link rel="stylesheet" href="/parsons-logex-prototype-I/assets/index.3c7eed9c.css">
 </head>
 
 <body>
